--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,2 +1,6 @@
 [theme]
-base = "light"
+primaryColor="#f21111"
+backgroundColor="#0e1117"
+secondaryBackgroundColor="#31333F"
+textColor="#fafafa"
+font="sans serif"
