--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,2 @@
 [theme]
-primaryColor="#f21111"
-backgroundColor="#0e1117"
-secondaryBackgroundColor="#31333F"
-textColor="#fafafa"
-font="sans serif"
+base = "light
